--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,16 @@
 services:
-  mysql:
-    image: mysql:latest
-    container_name: my_local_mysql
-    command: --mysql-native-password=ON
+  mysql-db:
+    image: mysql:8.4.0
+    container_name: local_mysql84
     volumes:
       - .docker/setup.sql:/docker-entrypoint-initdb.d/setup.sql
-      - ~/container/mysql8_4:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: mydatabase
-      MYSQL_PASSWORD: secret
-      MYSQL_ROOT_PASSWORD: verysecret
-      MYSQL_USER: myuser
+      - ~/container/mysql84:/var/lib/mysql
     ports:
       - 3306:3306
+    command: --mysql-native-password=ON
     restart: always
+    environment:
+      MYSQL_DATABASE: mydatabase
+      MYSQL_ROOT_PASSWORD: test
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypass
