--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,19 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation "org.springframework.boot:spring-boot-starter-security"
+	implementation "org.springframework.boot:spring-boot-starter-data-redis"
+	implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'javax.xml.bind:jaxb-api:2.2.4'
 	implementation "org.flywaydb:flyway-core:${flywayVersion}"  // flyway
 	implementation "org.flywaydb:flyway-mysql:${flywayVersion}" // flyway - mysql
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	implementation 'org.slf4j:slf4j-api:2.0.7'
 	implementation 'org.slf4j:jcl-over-slf4j:2.0.7'
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	implementation 'org.modelmapper:modelmapper:3.1.0'
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
