--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.7'
+
 services:
   mysql-db:
     image: mysql:8.4.0
@@ -14,3 +16,15 @@ services:
       MYSQL_ROOT_PASSWORD: test
       MYSQL_USER: myuser
       MYSQL_PASSWORD: mypass
+  redis:
+    image: redis:7.2
+    container_name: local_redis
+    ports:
+      - 6379:6379
+    volumes:
+      - ~/container/redis/data:/data
+    restart: always
+    labels:
+      - "name=redis"
+      - "mode=standalone"
+    command: redis-server --port 6379
